--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,18 @@
 #0aa0aa - deep cyan
 #2a2a2a - light grey
 #000000 - black
-#cccccc - lighter grey (background)
+#f7f7f7 - lighter grey (background)
  */
 html {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   color: #111111;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
 .flex {
@@ -24,6 +30,7 @@ html {
 
 .image-container img {
   display: block;
+  width: 100%;
 }
 
 .button-a {
@@ -51,22 +58,39 @@ html {
   cursor: pointer;
 }
 
+.button-c {
+  background-color: #0aa0aa;
+  color: white;
+  border: none;
+  padding: 1rem 1.875rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  border-radius: 4px;
+  font-size: 1rem;
+  min-width: max-content;
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 420px) {
 }
 
 /* Navbar styling */
-.navbar-mobile {
-  padding: 0.75rem;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #0dceda;
-  font-size: 1.5rem;
+header {
   position: fixed;
   height: 52.8px;
   left: 0;
   right: 0;
   top: 0;
-  
+  background-color: #0dceda;
+}
+
+.navbar-mobile {
+  padding: 0.75rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0dccda00;
+  font-size: 1.5rem;
+  height: 52.8px;
 }
 
 .logo-container-mobile {
@@ -109,22 +133,28 @@ html {
 }
 
 @media only screen and (min-width: 800px) {
-  .navbar-mobile {
-    display: none;
-  }
-  
-  .navbar-desktop {
-    display: flex;
-    padding: 0.75rem;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0dceda;
+  header {
     position: fixed;
     height: 5rem;
     left: 0;
     right: 0;
     top: 0;
-    
+    background-color: #0dceda;
+  }
+  
+  
+  .navbar-mobile {
+    display: none;
+  }
+  
+  .navbar-desktop {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    padding: 0.75rem;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0dceda00;
   }
 
   .logo-container-desktop {
@@ -169,3 +199,84 @@ html {
   }
 }
 
+/* Main Section */
+
+main {
+  position: relative;
+  top: 52.8px;
+  z-index: -1;
+}
+
+@media only screen and (min-width: 800px) {
+  main {
+    top: 5rem;
+  }
+}
+
+/* Intro section */
+
+.intro-container {
+  background-color: #f7f7f7;
+}
+.intro {
+  padding: 3rem 1rem;
+  justify-content: space-evenly;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.intro-left {
+  width: 100%;
+}
+
+.intro-left h1 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.intro-left p {
+  margin-bottom: 1rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+.intro-left button {
+  width: 100%;
+}
+
+.intro-img-container {
+  display: none;
+  width: 50%;
+}
+
+@media only screen and (min-width: 680px) {
+  .intro-left button {
+    width: auto;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .intro {
+    align-items: center;
+  }
+  
+  .intro-left {
+    width: 50%;
+    margin-right: 1.5rem;
+  }
+  
+  .intro-left h1 {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+  }
+
+  .intro-img-container{
+    display: block;
+  }
+
+  .intro-img-container img{
+    border-radius: 16px;
+  }
+}
