--- a/css/styles.css
+++ b/css/styles.css
@@ -215,10 +215,10 @@ main {
 
 /* Intro section */
 
-.intro-container {
+.intro {
   background-color: #f7f7f7;
 }
-.intro {
+.intro-container {
   padding: 3rem 1rem;
   justify-content: space-evenly;
   max-width: 1200px;
@@ -257,7 +257,7 @@ main {
 }
 
 @media only screen and (min-width: 800px) {
-  .intro {
+  .intro-container {
     align-items: center;
   }
   
@@ -280,3 +280,68 @@ main {
     border-radius: 16px;
   }
 }
+
+/* How investing with us works section */
+
+.investing-container {
+  max-width: 1200px;
+  padding: 3rem 1rem;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.investing-container h2 {
+  font-size: 1.75rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.investing-container h3 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+.investing-container li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.investing-container li h3 {
+  margin-bottom: 0;
+  margin-right: 1rem;
+  font-size: 2rem;
+}
+
+.investing-container p {
+  font-weight: 300;
+  line-height: 1.5;
+  color: #2a2a2a;
+}
+
+.investing-container button {
+  width: 100%;
+}
+
+.investing-container .image-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 680px) {
+  .investing-container .outer-container {
+    display: flex;
+  }
+  
+  .investing-container button {
+    width: auto;
+  }
+
+  .investing-container .image-container {
+    flex-shrink: 0.5;
+  }
+}
+
+/* Portfolio section */
+
