--- a/css/styles.css
+++ b/css/styles.css
@@ -475,6 +475,7 @@ main {
 .member p {
   font-weight: 300;
   line-height: 1.5;
+  text-align: justify;
 }
 
 @media only screen and (min-width: 680px) {
